tests/badly_positioned_polyt/badly_positioned_polyt.exp
Error ----------------------------------------------------------------------------------------------- concretize.js:10:1

Cannot create `C1` element because `EventTarget` [1] is incompatible with `C1` [2] in type argument `T` [3] of the first
argument of property `onKeyDown`.

   concretize.js:10:1
    10| <C1 onKeyDown={_onKeyDown} />;
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   <BUILTINS>/react-dom.js:181:21
   181|   +T: EventTarget = EventTarget,
                            ^^^^^^^^^^^ [1]
   concretize.js:9:47
     9| function _onKeyDown(e: SyntheticKeyboardEvent<C1>): void {};
                                                      ^^ [2]
   <BUILTINS>/react-dom.js:181:4
   181|   +T: EventTarget = EventTarget,
           ^ [3]


Error ----------------------------------------------------------------------------------------------- concretize.js:10:1

Cannot create `C1` element because `EventTarget` [1] is incompatible with `C1` [2] in type argument `T` of the first
argument of property `onKeyDown`.

   concretize.js:10:1
    10| <C1 onKeyDown={_onKeyDown} />;
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   <BUILTINS>/react-dom.js:181:7
   181|   +T: EventTarget = EventTarget,
              ^^^^^^^^^^^ [1]
   concretize.js:9:47
     9| function _onKeyDown(e: SyntheticKeyboardEvent<C1>): void {};
                                                      ^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:23:1

Cannot create `Foo` element because undefined property `context` [1] is incompatible with object type [2] in type
argument `Context`.

   test.js:23:1
   23| <Foo x={props.t} />;
       ^^^^^^^^^^^^^^^^^^^

References:
   test.js:17:10
   17|   Props: {},
                ^^ [1]
   test.js:18:12
   18|   Context: {},
                  ^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:35:1

Cannot create `Bar` element because undefined property `context` [1] is incompatible with object type [2] in type
argument `Context`.

   test.js:35:1
   35| <Bar y={props.t} />;
       ^^^^^^^^^^^^^^^^^^^

References:
   test.js:29:10
   29|   Props: {},
                ^^ [1]
   test.js:30:12
   30|   Context: {},
                  ^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:35:1

Cannot create `Bar` element because `T` [1] is incompatible with object type [2] in type argument `Props`.

   test.js:35:1
   35| <Bar y={props.t} />;
       ^^^^^^^^^^^^^^^^^^^

References:
   test.js:6:18
    6| type Props = {t: T};
                        ^ [1]
   test.js:29:10
   29|   Props: {},
                ^^ [2]



Found 5 errors
